# qsl-pdf-generator

./: .editorconfig  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  adif_log_parse.py  app.py  docker-compose.yml  pyproject.toml  setup.py
.circleci/: config.yml
.github/workflows/: pylint.yml
classes/: AdifLogParser.py  qso.py
input/: .gitignore  config.yml.default
modules/: adif_log_parser.py
qsl_pdf_publisher/: adif_log_parse.py  app.py  band_and_frequency.py  callsign.py  qso.py  user_config.py
qsl_pdf_publisher/log_file_utils/: adif_log_parse.py  get_log_file_list.py  log_file.py  parse_qso_log.py  sort.py
src/: app.py
src/tests/: test_adif_log_parse.py
styles/: style.css
templates/: index.html
tests/: conftest.py  test_adif_log_parse.py  test_app.py  test_band_and_frequency.py  test_callsign.py  test_sort.py  test_user_config.py  test_write_out_html.py
