[tool.poetry]
name = "qsl_pdf_generator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
weasyprint = "^53.3"
Jinja2 = "^3.0"
adif-io = "^0.0.3"

[tool.poetry.dev-dependencies]
pylint = "^2.11"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
